* Add setERR() method to enable/disable internal error notification to console for invalid selectors. [Diego Perini]

* Avoid using slice.call() on nodeLists in Opera 9.25 because they could return an empty array if the nodeList length property is an element. [jddalton]

* Optimize select_qsa() and id, name, and class selectors for non html elements. [jddalton]

* Make IE6/7 not use gEBN because changes to the name attribute aren't reflected by the gEBN results. [Diego Perini, jddalton]

* Ensure `NWID` is not assigned to non-html documents because that could throw an error. [jddalton]

* Make `:selected` an alias of `:checked`. [jddalton]

* Fix regression bug with `HOST_SIGNATURE`. [jddalton]

* Set `ctx_data` even when mutation events are not supported. [jddalton]

* Add `RE_BUGGY_QSA` test for QSA not detecting selected options via the `:checked` pseudo. [Alex Russell, jddalton]

* Remove support for `:selected` as CSS3 draft spec merges it with `:checked`. [Alex Russell, jddalton]

* Improved `:focus` pseudo's resolution by adding `A` and `AREA` elements as focusable. [Diego Perini, jddalton]

* Add `OPTIMIZE_CLASS_FIRST` flag so IE8 will optimize by className before tagName in select_regular(). [jddalton]

* Ensure select_qsa() removes non-elements from IE8 results. [jddalton]

* Add QSA fork of byClass() and simply `ctx_notHTML` forks in byClass(), byId(), and byName(). [jddalton] 

* Ensure setCache() and expireCache() don't throw errors in browsers that don't support DOM mutation events. [jddalton]

* Ensure byName() works with disconnected nodes as context. [jddalton]

* Fix regression in ID optimizers for selectors like `#foo.bar.baz`. [jddalton]

* Make sure classNames resolve correctly for forms that have children with name="className". [jddalton, pdanpdan]

* Ensure public byClass(), byId(), byName(), byTag(), expireCache(), and setCache() call changeContext() when needed. [jddalton]
